--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
       <p>
          <h2>{{this.id}}. {{this.burger_name}}</h2>
         <form action="/?_method=PUT" method="POST">
-          <input type="hidden" name="id" value="{{this.id}}">
+          <input type="hidden" name="id" placeholder="id">
           <button type="submit">Devour Burger!</button>
         </form>
       </p>
